.metals/.reports/metals/r_scala-toplevel-mtags_1690769031031
id: file://<WORKSPACE>/src/main/scala/app/Entry.scala:[963..964) in Input.VirtualFile("file://<WORKSPACE>/src/main/scala/app/Entry.scala", "package app

import scalafx.application.JFXApp3
import scalafx.application.JFXApp3.PrimaryStage
import scalafx.scene.Scene
import scenes.{GameScene, MainScene, OptionsScene, SceneManager}

object Entry extends JFXApp3 {
  override def start(): Unit = {
    AudioResource.load()


    stage = new PrimaryStage {
      title = "Robot Warfare"
      width = Settings.resolution_width()
      height = Settings.resolution_height()
      scene = new Scene()
    }

    Settings.resolution_width.onChange { (_, _, newValue) =>
      stage.width = newValue.doubleValue()
    }

    Settings.resolution_height.onChange { (_, _, newValue) =>
      stage.height = newValue.doubleValue()
    }

    val manager = new SceneManager(stage)
    manager += ("main", manager => new MainScene(manager))
    manager += ("options", manager => new OptionsScene(manager))
    manager += ("game", manager => new GameScene(manager))

    manager.transition("main")
  }


  override def 
}")
file://<WORKSPACE>/src/main/scala/app/Entry.scala:38: error: expected identifier; obtained rbrace
}
^